<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/report_cardView"
    android:layout_width="@dimen/card_width"
    android:layout_height="@dimen/report_height"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/margin_small"
    app:cardCornerRadius="7dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/margin_small"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/total_question"
            tools:text="Total Question" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_question_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_total_question"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_question"
            tools:text="12" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_attempted_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintStart_toStartOf="@+id/tv_total_question"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_question"
            android:text="@string/attempted_question"
            tools:text="Attempted Question" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_attempted_question_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_attempted_question"
            app:layout_constraintBottom_toBottomOf="@+id/tv_attempted_question"
            tools:text="10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintStart_toStartOf="@+id/tv_attempted_question"
            app:layout_constraintTop_toBottomOf="@+id/tv_attempted_question"
            android:text="@string/correct_answer"
            tools:text="Correct Answer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_correct_answer_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_correct_answer"
            app:layout_constraintBottom_toBottomOf="@+id/tv_correct_answer"
            tools:text="7" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wrong_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintStart_toStartOf="@+id/tv_correct_answer"
            app:layout_constraintTop_toBottomOf="@+id/tv_correct_answer"
            android:text="@string/wrong_answer"
            tools:text="Wrong Answer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wrong_answer_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_wrong_answer"
            app:layout_constraintBottom_toBottomOf="@+id/tv_wrong_answer"
            tools:text="3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_skipped_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintStart_toStartOf="@+id/tv_wrong_answer"
            app:layout_constraintTop_toBottomOf="@+id/tv_wrong_answer"
            android:text="@string/skipped_question"
            tools:text="Skipped Question" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_skipped_question_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/answer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_skipped_question"
            app:layout_constraintBottom_toBottomOf="@+id/tv_skipped_question"
            tools:text="2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_retake"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_skipped_question" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/retake"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>